fixed subtitle on mobile

--- a/styles/_home.scss
+++ b/styles/_home.scss
@@ -89,7 +89,7 @@ nav {
     }
 
     h3 {
-      font-size: 1rem;
+      font-size: 0.85rem;
     }
 
     .mobile-hero-img {
