--- a/styles/style.css
+++ b/styles/style.css
@@ -166,7 +166,7 @@ nav #logo {
     font-size: 1.8rem;
   }
   .forside h3 {
-    font-size: 1rem;
+    font-size: 0.85rem;
   }
   .forside .mobile-hero-img {
     display: inline-block;
